# django_stripe

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
djangostripe/: settings.py  urls.py  wsgi.py
payments/: apps.py  context_processors.py  models.py  signals.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_item_stripe_price_id.py
templates/: cancel.html  items.html  success.html
