[project]
name = "django-stripe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "stripe>=11.6.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
]
